--- a/form wave animation/index.html
+++ b/form wave animation/index.html
@@ -8,9 +8,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-
+   <div class="wrapper">
+    <div class="form-wrapper sign-in">
+        <form action="">
+            <h2>Login</h2>
+            <div class="input-group">
+                <input type="text"required>
+                <label for="username">Username</label>
+            </div>
+            <div class="input-group">
+                <input type="password"required>
+                <label for="password">password</label>
+            </div>
+            <div class="remember">
+                <label><input type="checkbox">Remember me</label>
+            <button type="submit">Login</button>
+            <div class="signUp-link">
+                <p>Don't have account?<a href="#"class="signUpBtnLink">Sign Up</a></p>
+            </div>
+        </form>
     </div>
+   </div>
+   <div class="form-wrapper sign-Up">
+    <form action="">
+        <h2>Sign Up</h2>`       
+        <div class="input-group">
+            <input type="text"required>
+            <label for="username">Username</label>
+        </div>
+        <div class="input-group">
+            <input type="email"required>
+            <label for="email">Email</label>
+        </div>
+        <div class="input-group">
+            <input type="password"required>
+            <label for="password">password</label>
+        </div>
+        <div class="remember">
+            <label><input type="checkbox">I agree to terms and conditions</label>
+        <button type="submit"> Sign Up</button>
+        <div class="signUp-link">
+            <p>Already have account?<a href="#"class="signInBtnLink">Sign In</a></p>
+        </div>
+    </form>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
