--- a/form wave animation/index.html
+++ b/form wave animation/index.html
@@ -48,7 +48,7 @@
             <label><input type="checkbox">I agree to terms and conditions</label>
         <button type="submit"> Sign Up</button>
         <div class="signUp-link">
-            <p>Already have account?<a href="#"class="signInBtnLink">Sign In</a></p>
+            <p>Already have account?<a href="#"class="signInBtnLink">Log In</a></p>
         </div>
     </form>
 </div>
