--- a/ScrollAnimation/index.html
+++ b/ScrollAnimation/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <h1>Scroll to see the Animation</h1>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
+    <div class="box"><h2>Contents</h2></div>
 
 
     <script src="index.js"></script>
