--- a/todolist/index.html
+++ b/todolist/index.html
@@ -18,6 +18,16 @@
             <i class="fa-solid fa-plus"></i>
         </button>
     </form>
+    <div class="todo-container">
+        <ul class="todo-list">
+            <!-- <div class="todo">
+
+            <li></li>
+            <button>Delete</button>
+            <button>Checked</button>
+            </div> -->
+        </ul>
+    </div>
 
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/69771235b3.js" crossorigin="anonymous"></script>
