--- a/Random choice picker/index.html
+++ b/Random choice picker/index.html
@@ -11,7 +11,11 @@
     <div class="container">
         <h3>Enter all choices divided by comma(",").<br>Press enter when done.</h3>
         <textarea placeholder="Enter choices here..." id="textarea"></textarea>
-        <div id="tags"></div>
+        <div id="tags">
+            <!-- <span class="tag">choice1</span>
+            <span class="tag highlight">choice2</span>
+            <span class="tag">choice3</span> -->
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
