--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="stopwatch">
-        <div class="timer-Display">00:00:00</div>
+        <div class="timerDisplay">00:00:00</div>
     </div>
     <div class="buttons">
         <button id="stopBtn"class="btn" style="--clr:red">Stop</button>
