--- a/Recipe App/index.html
+++ b/Recipe App/index.html
@@ -13,14 +13,14 @@
             <h1>Recipe App</h1>
             <form >
                 <input type="text"placeholder="Search your recipe" class="searchBox">
-                <button type="button">Search</button>
+                <button type="submit">Search</button>
             </form>
         </nav>
     </header>
     <main>
         <section>
             <div class="recipe-container">
-                <h2>Search your favorite recipe</h2>
+                <h2>Search your favorite recipe...</h2>
             </div>
         </section>
     </main>
