--- a/Recipe App/index.html
+++ b/Recipe App/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RECIPE APP:SHIVANI</title>
+    <title> MY RECIPE APP</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,17 +12,18 @@
         <nav>
             <h1>Recipe App</h1>
             <form >
-                <input type="text"placeholder="Search your recipe" class="searchBox">
-                <button type="submit">Search</button>
+                <input type="text"placeholder="Search your recipe..." class="searchBox">
+                <button type="submit" class="searchBtn">Search</button>
             </form>
         </nav>
     </header>
     <main>
         <section>
             <div class="recipe-container">
-                <h2>Search your favorite recipe...</h2>
+                <h2>Search your favorite recipe</h2>
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
